[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/actors/MapAI.gd" type="Script" id=1]
[ext_resource path="res://scenes/actors/Team.tscn" type="PackedScene" id=2]

[node name="MapAI" type="Node2D"]
script = ExtResource( 1 )

[node name="Team" parent="." instance=ExtResource( 2 )]

[node name="UnitContainer" type="Node2D" parent="."]

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="RespawnTimer" to="." method="_on_RespawnTimer_timeout"]
